Fix overflow issues

--- a/assets/css/partials/theme/_member-list.scss
+++ b/assets/css/partials/theme/_member-list.scss
@@ -2,9 +2,8 @@
 .member-list {
   position: relative;
   list-style: none;
-  margin: 0 -2px 0 0;
+  margin: 0 -2px;
   padding: 0;
-  width: calc(100% + 2px);
 
   @include display-flex();
   @include flex-wrap(wrap);
