--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6315,9 +6315,8 @@ select:focus {
 .member-list {
   position: relative;
   list-style: none;
-  margin: 0 -2px 0 0;
+  margin: 0 -2px;
   padding: 0;
-  width: calc(100% + 2px);
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
